--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,8 +11,13 @@ ports:
 
 vscode:
   extensions:
-    - redhat.java
     - vscjava.vscode-java-debug
     - vscjava.vscode-java-test
-    - pivotal.vscode-spring-boot
+    - vscjava.vscode-java-dependency
+    - vscjava.vscode-spring-boot-dashboard
+    - redhat.java
     - pivotal.vscode-boot-dev-pack
+    - pivotal.vscode-spring-boot
+    - vscjava.vscode-spring-initializr
+    - vscjava.vscode-maven
+    - vscjava.vscode-java-pack
