--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,6 +10,7 @@ ports:
 
 vscode:
   extensions:
+    - vscjava.vscode-java-pack
     - redhat.java
     - vscjava.vscode-java-debug
     - vscjava.vscode-java-test
