--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,8 +10,10 @@ ports:
 
 vscode:
   extensions:
-    - vscjava.vscode-java-pack
     - redhat.java
+    - vscjava.vscode-java-pack
+    - vscjava.vscode-java-dependency
+    - vscjava.vscode-maven
     - vscjava.vscode-java-debug
     - vscjava.vscode-java-test
     - pivotal.vscode-spring-boot
